Made adjustments according to the requirements

--- a/elkeszites.html
+++ b/elkeszites.html
@@ -4,42 +4,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/elkeszites.css">
-  <title>Tea</title>
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, print">
+  <link rel="stylesheet" href="css/elkeszites.css" type="text/css" media="screen, print">
+  <link rel="stylesheet" href="css/tortAndFajtak.css" type="text/css" media="screen, print">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css/nyomtatas.css" type="text/css" media="print"/>
+  <script src="js/zoom.js" defer></script>
+  <title>Tea - Elkészítés</title>
 </head>
 <body>
-  <h1 id="menuCim"> Tea </h1>
+  <p id="menuCim"> Tea </p>
   <header>
     <img src="media/menu/menu_felet.png" alt="tea farm" id="menuKep">
     <nav id="navbar">
       <ul >
-        <a class="navLink" href="index.html"><li>Főoldal</li></a>
-        <a class="navLink" href="tortenet.html"><li>Története</li></a>
-        <a class="navLink activeLink" href="elkeszites.html"><li>Elkészítése</li></a>
-        <a class="navLink" href="fajtak.html"><li>Fajták</li></a>
+        <li><a class="navLink" href="index.html">Főoldal</a></li>
+        <li><a class="navLink" href="tortenet.html">Története</a></li>
+        <li><a class="navLink activeLink" href="elkeszites.html">Elkészítése</a></li>
+        <li><a class="navLink" href="fajtak.html">Fajták</a></li>
       </ul>
+      <span id="zoom" class="material-icons">zoom_in</span>
     </nav>
   </header>
   <div id="content">
     <article>
-      <h2>Elkészítése</h2>
+      <h1 id="title">Teakészítés művészete</h1>
       <section>
+        <h2 class="oddH2">Elkészítése lépései</h2>
         <ol>
-          <li class="creaListItem">Melegíts fel, de ne forrald túl a vizet. Amint felforrt a víz, kapcsold is ki a forralódat.</li>
+          <li class="creaListItem">Melegítsd fel, de ne forrald túl a vizet. Amint felforrt a víz, kapcsold is ki a forralódat.</li>
           <li class="creaListItem">Ezzel a vízzel melegítsd elő a teás eszközöket, majd öntsd ki.</li>
           <li class="creaListItem">Tegyél megfelelő mennyiségű tealevelet a választott teakészítő eszközbe.</li>
           <li class="creaListItem">“Ébreszd fel” a teát egy kevés vízzel és gyorsan öntsd is le, egyenesen a kiöntőbe. Ezzel a vízzel is átöblítheted a csészéket, hogy azok is átmelegedjenek.</li>
           <li class="creaListItem">Ellenőrizd a víz hőmérsékletét, öntsd a levekre a megfelelő hőmérsékletű vizet, áztasd őket egy rövid ideig, ez gyakran 15-20 másodpercnél nem hosszabb.</li>
           <li class="creaListItem">Öntsd át a kiöntőbe a gaiwanból az elkészült teát. Ez lesz az első felöntés. Innen szervírozva mindenki ugyanolyan erősségű és ízű teát kap.</li>
-          <li class="creaListItem">Öntsd le újra és újra, ameddig élvezetes és ameddig teázni szeretnél. Ennyi az egész.</li>
+          <li class="creaListItem">Öntsd le újra és újra, ameddig élvezetes és ameddig teázni szeretnél. Ennyi az egész. :)</li>
         </ol>
       </section> 
-      <aside>Rengetegen a teakészítést egy fajta művészetként kezelik!</aside>
-      
-      <video src="media/keszites/tea_keszites.mp4" autoplay loop alt="Egy teakészítési folyamata látható csészékkel, teáskannával az előtérben. A háttérben egy füstölő és egy tábortűz teremti meg a békesség harmóniáját.">
-        A böngésződ nem támogatja a video tageket.
-      </video>
+      <aside>Rengetegen a teakészítést egyfajta művészetként kezelik!</aside>
+      <figure>
+        <video poster="media/keszites/poster.png" controls>
+          <source src="media/keszites/tea_keszites.mp4" type="video/mp4"/>
+          <track src="./video_leiras.txt" srclang="hu" label="video leírás" kind="descriptions"/>
+        </video>
+        <figcaption><a href="video_leiras.html" class="link">video leírása</a></figcaption>
+      </figure>
     </article>
     
   </div>
