--- a/index.html
+++ b/index.html
@@ -1,45 +1,50 @@
-<!DOCTYPE html>
-<html lang="hu">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="hu">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/index.css">
-  <title>Tea</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, print"/>
+  <link rel="stylesheet" href="css/index.css" type="text/css" media="screen, print"/>
+  <link rel="stylesheet" href="css/nyomtatas.css" type="text/css" media="print"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <script type="text/javascript" src="js/zoom.js" defer="defer"></script>
+  <title>Tea - Főoldal</title>
 </head>
 <body>
-  <h1 id="menuCim"> Tea </h1>
-  <header>
-    <img src="media/menu/menu_felet.png" alt="tea farm" id="menuKep">
-    <nav id="navbar">
+  <p id="menuCim"> Tea </p>
+  <div id="header">
+    <img src="media/menu/menu_felet.png" alt="tea farm" id="menuKep"/>
+    <div id="navbar">
       <ul >
-        <a class="navLink activeLink" href="index.html"><li>Főoldal</li></a>
-        <a class="navLink" href="tortenet.html"><li>Története</li></a>
-        <a class="navLink" href="elkeszites.html"><li>Elkészítése</li></a>
-        <a class="navLink" href="fajtak.html"><li>Fajták</li></a>
+        <li><a class="navLink activeLink" href="index.html">Főoldal</a></li>
+        <li><a class="navLink" href="tortenet.html">Története</a></li>
+        <li><a class="navLink" href="elkeszites.html">Elkészítése</a></li>
+        <li><a class="navLink" href="fajtak.html">Fajták</a></li>
       </ul>
-    </nav>
-  </header>
+      <span id="zoom" class="material-icons">zoom_in</span>
+    </div>
+  </div>
   <div id="content">
-    <article>
-      <h2>Általánosan a teákról</h2> 
-        <section>
-          <img src="media/fooldal/fooldal.jpg" alt="Két teacsésze és egy teás kancsó">
-          <p>A tea nevű ital a teacserje (Camellia sinensis) szárított leveleiből, rügyeiből, vagy szárából készülő főzet. Teának (plantateának) nevezzük ezen kívül a tealeveleket nem tartalmazó, más szárított növények, továbbá gyógynövények, fűszerek vagy gyümölcsök főzetét is.
-            <br><br>
-            A teacserje Ázsiában honos, a belőle készült tea innen terjedt el az egész világon. A teák főzetének nagyon sok élettani
-            hatást tulajdonítanak. A különféle teák más-más eltérő tulajdonsággal rendelkezhetnek, ezért fogyasztásuk előtt érdemes megvizsgálni, hogyan hathatnak az
-            emberi szervezetre. Általában kedvezőtlen mellékhatásuk nincs, de okozhatnak élénkítő hatásuk miatt álmatlanságot. A gyógynövények teájának hatásai az illető növény gyógyító erejét hordozzák
-            magukban, így rendkívül változatos és különböző betegségekre ható teákat különíthetünk el. 2020-tól kezdődően május 21-ét az ENSZ a tea világnapjának nyilvánította.</p>
-        </section>
-    </article>
-
+    <div>
+      <h1 id="title">Általánosan a teákról</h1> 
+        <div>
+          <a href="media/fooldal/fooldal.jpg">
+            <img src="media/fooldal/fooldal_kicsi.jpg" alt="Két teacsésze és egy teás kancsó"/>
+          </a>
+        <p>A tea nevű ital a teacserje (Camellia sinensis) szárított leveleiből, rügyeiből, vagy szárából készülő főzet. Teának (plantateának) nevezzük ezen kívül a tealeveleket nem tartalmazó, más szárított növények, továbbá gyógynövények, fűszerek vagy gyümölcsök főzetét is.
+          <br/>
+          A teacserje Ázsiában honos, a belőle készült tea innen terjedt el az egész világon. A teák főzetének nagyon sok élettani
+          hatást tulajdonítanak. A különféle teák más-más eltérő tulajdonsággal rendelkezhetnek, ezért fogyasztásuk előtt érdemes megvizsgálni, hogyan hathatnak az
+          emberi szervezetre. Általában kedvezőtlen mellékhatásuk nincs, de okozhatnak élénkítő hatásuk miatt álmatlanságot. A gyógynövények teájának hatásai az illető növény gyógyító erejét hordozzák
+          magukban, így rendkívül változatos és különböző betegségekre ható teákat különíthetünk el. 2020-tól kezdődően május 21-ét az ENSZ a tea világnapjának nyilvánította.
+        </p>
+      </div>
+    </div>
   </div>
   
-  <footer>
+  <div id="footer">
     <p>COPYRIGHT© 2022</p>
     <p>Készítette: Huang Yu</p>
-  </footer>
+  </div>
 </body>
 </html>
