--- a/tortenet.html
+++ b/tortenet.html
@@ -4,49 +4,72 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/tortAndFajtak.css">
-  <title>Tea</title>
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen, print">
+  <link rel="stylesheet" href="css/tortAndFajtak.css" type="text/css" media="screen, print">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css/nyomtatas.css" type="text/css" media="print"/>
+  <script src="js/zoom.js" defer></script>
+  <title>Tea - Története</title>
 </head>
 <body>
-  <h1 id="menuCim"> Tea </h1>
+  <p id="menuCim"> Tea </p>
   <header>
-    <img src="media/menu/menu_felet.png" alt="tea farm" id="menuKep">
+      <img src="media/menu/menu_felet.png" alt="tea farm" id="menuKep">
     <nav id="navbar">
       <ul >
-        <a class="navLink" href="index.html"><li>Főoldal</li></a>
-        <a class="navLink activeLink" href="tortenet.html"><li>Története</li></a>
-        <a class="navLink" href="elkeszites.html"><li>Elkészítése</li></a>
-        <a class="navLink" href="fajtak.html"><li>Fajták</li></a>
+        <li><a class="navLink" href="index.html">Főoldal</a></li>
+        <li><a class="navLink activeLink" href="tortenet.html">Története</a></li>
+        <li><a class="navLink" href="elkeszites.html">Elkészítése</a></li>
+        <li><a class="navLink" href="fajtak.html">Fajták</a></li>
       </ul>
+      <span id="zoom" class="material-icons">zoom_in</span>
     </nav>
   </header>
   <div id="content">
     <article>
-      <h2>Tea története</h2>
-      <section class="oddSec">
-        <img src="media/tortenet/teaugy.jpg" alt="Teakóstoló program, tearendezvény" style="height: 100%;">
+      <h1 id="title">Tea története</h1>
+      <div class="oddSec">
+        <figure>
+          <a href="media/tortenet/teaugy.jpg" target="blank">
+            <img src="media/tortenet/teaugy_kicsi.jpg" alt="Teakóstoló program, tearendezvény">
+          </a>
+          <figcaption>Teakóstoló program, rendezvény</figcaption>
+        </figure>
         <p>
-          A teát eredetileg orvosságként használták és mint gyógynövény került be először napi italaink közé. Az egyik történet szerint Buddha fedezte fel a teát, midőn egy napon a kertben meditálva egy tealevél hullott csészéjébe. Egy másik történet szerint amikor Bódhidharma lemetszette szemhéjait, hogy ne hulljon álom szemére meditáció közben, az első tearügyek ott pattantak ki, ahova szemhéjai hullottak. Ismét más történet szerint i. e. 2737-ben Sen Nung kínai császár forró ivóvizébe utazása közben egy vad teanövényről levelek hullottak, sárgás-barna folyadékot eredményezve. Kíváncsiságból megízlelte a keveréket, és megkedvelte ízét és frissítő hatását. A nyugaton a legelső utalást egy arab utazó tette a teára, miszerint a 879. esztendőt követően Kantonban a só és a tea volt a legnagyobb jövedéki forrás. Marco Polo 1285-ben feljegyezte, hogy a kínai pénzügyminisztert azért mozdítottak el helyéről, mert önkényesen intézkedett a teára kivetett vámokat illetően és túl magasra emelte az árát. A 14. században az európaiak egyre jobban felfedezték a Távol-Keletet, a hollandok egy utazásról teacserjével tértek vissza és azzal a hírrel, hogy ezekből a levelekből pompás üdítő italt főznek. Eleinte csupán mint valamilyen „szárított füvet” emlegették, ami illatosabb, mint a szárított lóhere, de keserű ízű és nem volt ismeretes jótékony hatása. Egy Szulejmán nevű arab kereskedő a 9. században szól róla, de ő is a tea szervírozására szóló készletet dicséri, nem magát a teát. A portugál felfedezők voltak az első európaiak, akik Japánba látogatva először ízlelhették meg a teát 1560 környékén. Az első komolyabb ismertető Giovanni Batista Ramusio tollából született 1565-ben, L. Almeida 1576-ban és Maffeno 1588-ban, majd Taxeira 1610-ben ír róla. 1610-ben megérkezik az Európába az első szállítmány tea a Holland Kelet-indiai Társaság hajóival, amely aztán monopóliumot szerez a tea szállítására. Ezért aztán a hollandok ismerik meg először a teát igazán. Szállítása gyékénnyel bélelt faládákban történt, hogy a sós tengeri levegő ne károsítsa a rakományt, az értékesebbeket ólomládákba csomagolták. A tealevelek használata különféle volt, először nem ismerték a hagyományos kínai vagy japán teaszertartást, ezért előfordult, hogy magát a leforrázott tealevelet ették meg kenyérrel. 1568-ban Londonban már lehetett teát kapni a kávéházakban és hamarosan elterjedt helyes használata egy újságcikk eredményeképpen. A legpatinásabb céget 1706-ban Thomas Twining alapította. Az Arany Oroszlán nevű teaházában nemcsak fogyasztani lehetett a teát, hanem meg is vásárolhatták. Ez az üzlet jelenleg is működik Londonban a Strand utcában. Leghíresebb teakeverékük, az Earl Grey ma is világhírű. 
+          <i>A teát</i> eredetileg orvosságként használták és mint gyógynövény került be először napi italaink közé. Az egyik történet szerint Buddha fedezte fel a teát, midőn egy napon a kertben meditálva egy tealevél hullott csészéjébe. Egy másik történet szerint amikor Bódhidharma lemetszette szemhéjait, hogy ne hulljon álom szemére meditáció közben, az első tearügyek ott pattantak ki, ahova szemhéjai hullottak. Ismét más történet szerint i. e. 2737-ben Sen Nung kínai császár forró ivóvizébe utazása közben egy vad teanövényről levelek hullottak, sárgás-barna folyadékot eredményezve. Kíváncsiságból megízlelte a keveréket, és megkedvelte ízét és frissítő hatását. A nyugaton a legelső utalást egy arab utazó tette a teára, miszerint a 879. esztendőt követően Kantonban a só és a tea volt a legnagyobb jövedéki forrás. Marco Polo 1285-ben feljegyezte, hogy a kínai pénzügyminisztert azért mozdítottak el helyéről, mert önkényesen intézkedett a teára kivetett vámokat illetően és túl magasra emelte az árát. A 14. században az európaiak egyre jobban felfedezték a Távol-Keletet, a hollandok egy utazásról teacserjével tértek vissza és azzal a hírrel, hogy ezekből a levelekből pompás üdítő italt főznek. Eleinte csupán mint valamilyen „szárított füvet” emlegették, ami illatosabb, mint a szárított lóhere, de keserű ízű és nem volt ismeretes jótékony hatása. Egy Szulejmán nevű arab kereskedő a 9. században szól róla, de ő is a tea szervírozására szóló készletet dicséri, nem magát a teát. A portugál felfedezők voltak az első európaiak, akik Japánba látogatva először ízlelhették meg a teát 1560 környékén. Az első komolyabb ismertető Giovanni Batista Ramusio tollából született 1565-ben, L. Almeida 1576-ban és Maffeno 1588-ban, majd Taxeira 1610-ben ír róla. 1610-ben megérkezik az Európába az első szállítmány tea a Holland Kelet-indiai Társaság hajóival, amely aztán monopóliumot szerez a tea szállítására. Ezért aztán a hollandok ismerik meg először a teát igazán. Szállítása gyékénnyel bélelt faládákban történt, hogy a sós tengeri levegő ne károsítsa a rakományt, az értékesebbeket ólomládákba csomagolták. A tealevelek használata különféle volt, először nem ismerték a hagyományos kínai vagy japán teaszertartást, ezért előfordult, hogy magát a leforrázott tealevelet ették meg kenyérrel. 1568-ban Londonban már lehetett teát kapni a kávéházakban és hamarosan elterjedt helyes használata egy újságcikk eredményeképpen. A legpatinásabb céget 1706-ban Thomas Twining alapította. Az Arany Oroszlán nevű teaházában nemcsak fogyasztani lehetett a teát, hanem meg is vásárolhatták. Ez az üzlet jelenleg is működik Londonban a Strand utcában. Leghíresebb teakeverékük, az Earl Grey ma is világhírű. 
         </p>
+      </div>
+
+      <section>
+        <h2 id="bostoni_teadelutan" class="evenH2">Bostoni teadélután</h2>
+        <div class="evenSec">
+          <figure>
+            <a href="media/tortenet/bostoni_tea_delutan.jpg" target="blank">
+              <img src="media/tortenet/bostoni_tea_delutan_kicsi.jpg" alt="Az emberek a teaszállítmányokat a tengerbe dobják.">
+            </a>
+            <figcaption>Bostoni teadélután</figcaption>
+          </figure>
+          <p>
+            <i>A bostoni teadélután</i> a bostoniak felkelése volt 1773-ban, amikor a tea adója miatti tiltakozásul az angol teaszállítmányokat a tengerbe dobták (ez után hozták az 1773-as teatörvényt). A britek hatalmas teakereslete nagy kereskedelmi hiányt okozott Kínával, ezért a Brit Birodalom a meghódított Indiában beindította saját teafeldolgozását. A kínaiak csak ezüstért és zenélő órákért árulták a teát. A kereskedelmi hiányt az indiai ópium eladásával próbálták kiegyenlíteni Kínával, ami az 1838–1842 közötti ópiumháborúhoz vezetett.
+            <a class="link" href="https://hu.wikipedia.org/wiki/Bostoni_tead%C3%A9lut%C3%A1n" target="blank">További részletekről itt olvashatsz!</a>
+          </p>
+        </div>
       </section>
 
-      <h2 class="evenH2">Bostoni teadélután</h2>
-      <section class="evenSec">
-          <img src="media/tortenet/bostoni_tea_delutan.jpg" alt="Egy rajz arról, hogy az emberek a teaszállítmányokat a tengerbe dobják.">
-        <p>
-          A bostoni teadélután a bostoniak felkelése volt 1773-ban, amikor a tea adója miatti tiltakozásul az angol teaszállítmányokat a tengerbe dobták (ez után hozták az 1773-as teatörvényt). A britek hatalmas teakereslete nagy kereskedelmi hiányt okozott Kínával, ezért a Brit Birodalom a meghódított Indiában beindította saját teafeldolgozását. A kínaiak csak ezüstért és zenélő órákért árulták a teát. A kereskedelmi hiányt az indiai ópium eladásával próbálták kiegyenlíteni Kínával, ami az 1838–1842 közötti ópiumháborúhoz vezetett.
-            <a href="https://hu.wikipedia.org/wiki/Bostoni_tead%C3%A9lut%C3%A1n" target="blank">További részletekről itt olvashatsz!</a>
-        </p>
-      </section>
-      
-      <h2>A teaklipperek versenye</h2>
-      <section class="oddSec">
-          <img src="media/tortenet//tea_futam.jpg" alt="Egy fekete fehér kép egy teaszállító hajóról.">        
-        <p>
-          Kína és London között az 1860-as évektől a Szuezi-csatorna megnyitásáig klipperekkel szállították a teát. A klipperek az akkoriban épített leggyorsabb vitorláshajók voltak. A nagy teaverseny igazi társadalmi esemény volt a viktoriánus Londonban, fogadásokat kötöttek a leggyorsabb hajóra. A Cutty Sark teaklipper 1922-ig hajózott, jelenleg hajómúzeum Londonban.
-          <a href="https://hajozas.hu/magazin/vitorlazas/a-nagy-teafutam-nyomaban/" target="blank">További részletekről itt olvashatsz!</a>
-        </p>
+      <section>
+        <h2 id="teaklipper_verseny" class="oddH2">A teaklipperek versenye</h2>
+        <div class="oddSec">
+          <figure>
+            <a href="media/tortenet/tea_futam.jpg" target="blank">
+              <img src="media/tortenet//tea_futam_kicsi.jpg" alt="Egy teaszállító hajó.">        
+            </a>
+            <figcaption>Tea klipper</figcaption>  
+          </figure>
+          <p>
+            Kína és London között az 1860-as évektől a Szuezi-csatorna megnyitásáig klipperekkel szállították a teát. A klipperek az akkoriban épített leggyorsabb vitorláshajók voltak. <i>A nagy teaverseny</i> igazi társadalmi esemény volt a viktoriánus Londonban, fogadásokat kötöttek a leggyorsabb hajóra. A Cutty Sark teaklipper 1922-ig hajózott, jelenleg hajómúzeum Londonban.
+            <a class="link" href="https://hajozas.hu/magazin/vitorlazas/a-nagy-teafutam-nyomaban/" target="blank">További részletekről itt olvashatsz!</a>
+          </p>
+        </div>
       </section>
     </article>
   </div>
